grammar/TikzParser.py
# Generated from grammar/Tikz.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class TikzParser ( Parser ):

    grammarFileName = "Tikz.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'--'", "'['", "']'", "'/.'", "'style'", 
                     "'cm'", "'\\begin{tikzpicture}'", "'\\end{tikzpicture}'", 
                     "'\\node'", "'\\draw'", "'at'", "'every'", "'('", "')'", 
                     "'{'", "'}'", "'='", "','", "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BEGINTIKZPICTURE", 
                      "ENDTIKZPICTURE", "NODE", "DRAW", "AT", "EVERY", "OPEN_PARANTHESES", 
                      "CLOSE_PARANTHESES", "OPEN_CURLY_BRACKETS", "CLOSE_CURLY_BRACKETS", 
                      "EQUAL_TO", "COMMA", "COLON", "SEMICOLON", "DIGIT", 
                      "VARIABLE", "COMMENT", "WS" ]

    RULE_begin = 0
    RULE_instructions = 1
    RULE_draw = 2
    RULE_nodeList = 3
    RULE_edgeNode = 4
    RULE_edgeProperties = 5
    RULE_node = 6
    RULE_nodeId = 7
    RULE_allGlobalProperties = 8
    RULE_globalProperties = 9
    RULE_nodeProperties = 10
    RULE_properties = 11
    RULE_individualProperty = 12
    RULE_coordinates = 13
    RULE_label = 14

    ruleNames =  [ "begin", "instructions", "draw", "nodeList", "edgeNode", 
                   "edgeProperties", "node", "nodeId", "allGlobalProperties", 
                   "globalProperties", "nodeProperties", "properties", "individualProperty", 
                   "coordinates", "label" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    BEGINTIKZPICTURE=7
    ENDTIKZPICTURE=8
    NODE=9
    DRAW=10
    AT=11
    EVERY=12
    OPEN_PARANTHESES=13
    CLOSE_PARANTHESES=14
    OPEN_CURLY_BRACKETS=15
    CLOSE_CURLY_BRACKETS=16
    EQUAL_TO=17
    COMMA=18
    COLON=19
    SEMICOLON=20
    DIGIT=21
    VARIABLE=22
    COMMENT=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGINTIKZPICTURE(self):
            return self.getToken(TikzParser.BEGINTIKZPICTURE, 0)

        def allGlobalProperties(self):
            return self.getTypedRuleContext(TikzParser.AllGlobalPropertiesContext,0)


        def ENDTIKZPICTURE(self):
            return self.getToken(TikzParser.ENDTIKZPICTURE, 0)

        def EOF(self):
            return self.getToken(TikzParser.EOF, 0)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(TikzParser.InstructionsContext,i)


        def getRuleIndex(self):
            return TikzParser.RULE_begin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin" ):
                listener.enterBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin" ):
                listener.exitBegin(self)




    def begin(self):

        localctx = TikzParser.BeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_begin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(TikzParser.BEGINTIKZPICTURE)
            self.state = 31
            self.allGlobalProperties()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TikzParser.NODE or _la==TikzParser.DRAW:
                self.state = 32
                self.instructions()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(TikzParser.ENDTIKZPICTURE)
            self.state = 39
            self.match(TikzParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self):
            return self.getTypedRuleContext(TikzParser.NodeContext,0)


        def instructions(self):
            return self.getTypedRuleContext(TikzParser.InstructionsContext,0)


        def draw(self):
            return self.getTypedRuleContext(TikzParser.DrawContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_instructions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstructions" ):
                listener.enterInstructions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstructions" ):
                listener.exitInstructions(self)




    def instructions(self):

        localctx = TikzParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instructions)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.node()
                self.state = 42
                self.instructions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.draw()
                self.state = 45
                self.instructions()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.draw()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.node()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DrawContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(TikzParser.DRAW, 0)

        def edgeProperties(self):
            return self.getTypedRuleContext(TikzParser.EdgePropertiesContext,0)


        def nodeList(self):
            return self.getTypedRuleContext(TikzParser.NodeListContext,0)


        def SEMICOLON(self):
            return self.getToken(TikzParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_draw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDraw" ):
                listener.enterDraw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDraw" ):
                listener.exitDraw(self)




    def draw(self):

        localctx = TikzParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_draw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(TikzParser.DRAW)
            self.state = 52
            self.edgeProperties()
            self.state = 53
            self.nodeList()
            self.state = 54
            self.match(TikzParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeNode(self):
            return self.getTypedRuleContext(TikzParser.EdgeNodeContext,0)


        def nodeList(self):
            return self.getTypedRuleContext(TikzParser.NodeListContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_nodeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeList" ):
                listener.enterNodeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeList" ):
                listener.exitNodeList(self)




    def nodeList(self):

        localctx = TikzParser.NodeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nodeList)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.edgeNode()
                self.state = 57
                self.match(TikzParser.T__0)
                self.state = 58
                self.nodeList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.edgeNode()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeNodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordinates(self):
            return self.getTypedRuleContext(TikzParser.CoordinatesContext,0)


        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)

        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_edgeNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeNode" ):
                listener.enterEdgeNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeNode" ):
                listener.exitEdgeNode(self)




    def edgeNode(self):

        localctx = TikzParser.EdgeNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_edgeNode)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.coordinates()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(TikzParser.OPEN_PARANTHESES)
                self.state = 65
                self.match(TikzParser.VARIABLE)
                self.state = 66
                self.match(TikzParser.CLOSE_PARANTHESES)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgePropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_edgeProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeProperties" ):
                listener.enterEdgeProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeProperties" ):
                listener.exitEdgeProperties(self)




    def edgeProperties(self):

        localctx = TikzParser.EdgePropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_edgeProperties)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(TikzParser.T__1)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.VARIABLE:
                    self.state = 70
                    self.properties()


                self.state = 73
                self.match(TikzParser.T__2)
                pass
            elif token in [TikzParser.OPEN_PARANTHESES]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(TikzParser.NODE, 0)

        def nodeId(self):
            return self.getTypedRuleContext(TikzParser.NodeIdContext,0)


        def nodeProperties(self):
            return self.getTypedRuleContext(TikzParser.NodePropertiesContext,0)


        def AT(self):
            return self.getToken(TikzParser.AT, 0)

        def coordinates(self):
            return self.getTypedRuleContext(TikzParser.CoordinatesContext,0)


        def label(self):
            return self.getTypedRuleContext(TikzParser.LabelContext,0)


        def SEMICOLON(self):
            return self.getToken(TikzParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)




    def node(self):

        localctx = TikzParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_node)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(TikzParser.NODE)
            self.state = 78
            self.nodeId()
            self.state = 79
            self.nodeProperties()
            self.state = 80
            self.match(TikzParser.AT)
            self.state = 81
            self.coordinates()
            self.state = 82
            self.label()
            self.state = 83
            self.match(TikzParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeIdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)

        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def DIGIT(self):
            return self.getToken(TikzParser.DIGIT, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_nodeId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeId" ):
                listener.enterNodeId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeId" ):
                listener.exitNodeId(self)




    def nodeId(self):

        localctx = TikzParser.NodeIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nodeId)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.OPEN_PARANTHESES]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(TikzParser.OPEN_PARANTHESES)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.DIGIT or _la==TikzParser.VARIABLE:
                    self.state = 86
                    _la = self._input.LA(1)
                    if not(_la==TikzParser.DIGIT or _la==TikzParser.VARIABLE):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 89
                self.match(TikzParser.CLOSE_PARANTHESES)
                pass
            elif token in [TikzParser.T__1, TikzParser.AT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllGlobalPropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalProperties(self):
            return self.getTypedRuleContext(TikzParser.GlobalPropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_allGlobalProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllGlobalProperties" ):
                listener.enterAllGlobalProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllGlobalProperties" ):
                listener.exitAllGlobalProperties(self)




    def allGlobalProperties(self):

        localctx = TikzParser.AllGlobalPropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_allGlobalProperties)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(TikzParser.T__1)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.EVERY or _la==TikzParser.VARIABLE:
                    self.state = 94
                    self.globalProperties(0)


                self.state = 97
                self.match(TikzParser.T__2)
                pass
            elif token in [TikzParser.ENDTIKZPICTURE, TikzParser.NODE, TikzParser.DRAW]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalPropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVERY(self):
            return self.getToken(TikzParser.EVERY, 0)

        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def EQUAL_TO(self):
            return self.getToken(TikzParser.EQUAL_TO, 0)

        def OPEN_CURLY_BRACKETS(self):
            return self.getToken(TikzParser.OPEN_CURLY_BRACKETS, 0)

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def CLOSE_CURLY_BRACKETS(self):
            return self.getToken(TikzParser.CLOSE_CURLY_BRACKETS, 0)

        def globalProperties(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.GlobalPropertiesContext)
            else:
                return self.getTypedRuleContext(TikzParser.GlobalPropertiesContext,i)


        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_globalProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalProperties" ):
                listener.enterGlobalProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalProperties" ):
                listener.exitGlobalProperties(self)



    def globalProperties(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TikzParser.GlobalPropertiesContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_globalProperties, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.EVERY]:
                self.state = 102
                self.match(TikzParser.EVERY)
                self.state = 103
                self.match(TikzParser.VARIABLE)
                self.state = 104
                self.match(TikzParser.T__3)
                self.state = 105
                self.match(TikzParser.T__4)
                self.state = 106
                self.match(TikzParser.EQUAL_TO)
                self.state = 107
                self.match(TikzParser.OPEN_CURLY_BRACKETS)
                self.state = 108
                self.properties()
                self.state = 109
                self.match(TikzParser.CLOSE_CURLY_BRACKETS)
                pass
            elif token in [TikzParser.VARIABLE]:
                self.state = 111
                self.properties()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TikzParser.GlobalPropertiesContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_globalProperties)
                    self.state = 114
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 115
                    self.match(TikzParser.COMMA)
                    self.state = 116
                    self.globalProperties(4) 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class NodePropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_nodeProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeProperties" ):
                listener.enterNodeProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeProperties" ):
                listener.exitNodeProperties(self)




    def nodeProperties(self):

        localctx = TikzParser.NodePropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nodeProperties)
        self._la = 0 # Token type
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(TikzParser.T__1)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.VARIABLE:
                    self.state = 123
                    self.properties()


                self.state = 126
                self.match(TikzParser.T__2)
                pass
            elif token in [TikzParser.AT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def individualProperty(self):
            return self.getTypedRuleContext(TikzParser.IndividualPropertyContext,0)


        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_properties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties" ):
                listener.enterProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties" ):
                listener.exitProperties(self)




    def properties(self):

        localctx = TikzParser.PropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_properties)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.individualProperty()
                self.state = 131
                self.match(TikzParser.COMMA)
                self.state = 132
                self.properties()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.individualProperty()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndividualPropertyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL_TO(self):
            return self.getToken(TikzParser.EQUAL_TO, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(TikzParser.VARIABLE)
            else:
                return self.getToken(TikzParser.VARIABLE, i)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(TikzParser.DIGIT)
            else:
                return self.getToken(TikzParser.DIGIT, i)

        def getRuleIndex(self):
            return TikzParser.RULE_individualProperty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndividualProperty" ):
                listener.enterIndividualProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndividualProperty" ):
                listener.exitIndividualProperty(self)




    def individualProperty(self):

        localctx = TikzParser.IndividualPropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_individualProperty)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 137
                    self.match(TikzParser.VARIABLE)
                    self.state = 140 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==TikzParser.VARIABLE):
                        break

                self.state = 142
                self.match(TikzParser.EQUAL_TO)
                self.state = 144 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 143
                        _la = self._input.LA(1)
                        if not(_la==TikzParser.DIGIT or _la==TikzParser.VARIABLE):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()

                    else:
                        raise NoViableAltException(self)
                    self.state = 146 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 148
                        self.match(TikzParser.VARIABLE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 151 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordinatesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TikzParser.RULE_coordinates

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CartesianCoordinatesContext(CoordinatesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TikzParser.CoordinatesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)
        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(TikzParser.DIGIT)
            else:
                return self.getToken(TikzParser.DIGIT, i)
        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)
        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCartesianCoordinates" ):
                listener.enterCartesianCoordinates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCartesianCoordinates" ):
                listener.exitCartesianCoordinates(self)


    class PolarCoordinatesContext(CoordinatesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TikzParser.CoordinatesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)
        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(TikzParser.DIGIT)
            else:
                return self.getToken(TikzParser.DIGIT, i)
        def COLON(self):
            return self.getToken(TikzParser.COLON, 0)
        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolarCoordinates" ):
                listener.enterPolarCoordinates(self)
